Sat May 30 13:37:58 CEST 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Initialise page_encoding.

Wed May 13 18:28:44 BST 2009  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20090501.
	* tools/config.guess, tools/config.sub: Update.

Wed Apr 22 15:50:51 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (lt_name): Add.

Wed Apr 15 00:34:06 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/it/man1/whatis.man1 (STATI D'USCITA): Fix section heading
	  (formerly "STATI D?USCITA") to match man(1) and apropos(1).
	  Reported by Ken Moffat.

Wed Apr 15 00:33:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/check-man: Set MAN_KEEP_FORMATTING=1, since a UTF-8-aware col
	  (such as that in util-linux-ng) will object to being asked to
	  process non-ASCII text under LC_ALL=C. Reported by Ken Moffat.
	* docs/NEWS: Document this.

Wed Apr 15 00:31:00 BST 2009  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.6.

Wed Apr 15 00:22:54 BST 2009  Colin Watson  <cjwatson@debian.org>

	* .bzrignore: Ignore gnulib/lib/glthread/.deps and
	  gnulib/lib/glthread/.dirstamp.

Wed Apr 15 00:20:45 BST 2009  Colin Watson  <cjwatson@debian.org>

	Upgrade to Autoconf 2.63, Automake 1.10.2, and Gnulib 20090401.

Tue Apr 14 23:59:40 BST 2009  Colin Watson  <cjwatson@debian.org>

	Call gnulib-tool after autopoint, and only use the gettext macros
	supplied via gnulib. This is required to work properly with current
	versions of gettext and gnulib; see
	http://lists.gnu.org/archive/html/bug-gnulib/2009-03/msg00154.html
	and thread.

	* autogen.sh: If gnulib-tool is installed, call autopoint first and
	  prevent autoreconf from calling it later. Remove special handling
	  of tools/config.rpath, which is not necessary with this approach.
	* Makefile.am (ACLOCAL_AMFLAGS): Put gnulib/m4 before m4, so that
	  autopoint puts its macros in gnulib/m4 (later overwritten by
	  gnulib-tool).
