@@ -334,7 +334,8 @@ extern struct compression comp_list[];
 #include <stddef.h>	/* for size_t */
 #include "xalloc.h"
 #include "xstrndup.h"
-extern char *create_tempdir (const char *template);
+extern char *create_tempdir (const char *template)
+	ATTRIBUTE_WARN_UNUSED_RESULT;
 
 extern int debug_level;		/* shows whether -d issued */
 extern void debug (const char *message, ...) ATTRIBUTE_FORMAT_PRINTF(1, 2);
